kubernetes/router/router-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glinet-router
  namespace: router
spec:
  type: ClusterIP
  clusterIP: None # Makes it headless
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: orange-router
  namespace: router
spec:
  type: ClusterIP
  clusterIP: None # Makes it headless
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
