kubernetes/router/router-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: router-ingress
  namespace: cert-manager
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`router.admin.thelegend27.fr`)
      # middlewares:
      #   - name: traefik-forward-auth
      #     namespace: traefik
      services:
        - name: glinet-router
          namespace: router
          port: 443
          serversTransport: insecure-skip-verify
          passHostHeader: false
          # scheme: https
  tls:
    secretName: wildcard-admin-thelegend27-tls
